# stregaml

./: .gitignore  .ocamlformat  LICENSE  Makefile  README.md  TODO.txt  cafec.opam  code-of-conduct.md  dune-project  makefile  pred.opam  run_scratch.py  test.py
cafe/: cafe.re  jbuild
cafec/: jbuild  lex.re  lex.rei  lexer_types.re  main.ml  main.re  parse.re  parse.rei  parse__lex.re  parse__lex.rei  parser_error.re  spanned.re  token.re  untyped_ast.re  untyped_ast.rei
cafec/interpreter/: cafec_interpreter.ml  cafec_interpreter.mli  jbuild
cafec/parse/: ast.ml  ast.mli  ast.re  ast.rei  cafec_parse.ml  cafec_parse.mli  cafec_parse.re  cafec_parse.rei  error.ml  error.mli  error.re  error.rei  jbuild  lex.ml  lex.mli  lex.re  lex.rei  parse.re  parse.rei  token.ml  token.mli  token.re  token.rei
cafec/spanned/: cafec_spanned.ml  cafec_spanned.mli  cafec_spanned.re  cafec_spanned.rei  jbuild  spanned.re
cafec/typed_ast/: cafec_typed_ast.ml  cafec_typed_ast.mli  cafec_typed_ast.re  cafec_typed_ast.rei  error.ml  error.mli  error.re  error.rei  expr.ml  internal.ml  jbuild  type.ml  type.mli  typed_ast.re  (+1 more)
language/: ideas.txt  scratch-yiddish.cf  scratch.cf
lib/: Cafec.ml  Cafec.mli  dune
pred/: array_.re  array_.rei  dynamic_array.re  dynamic_array.rei  errors.re  interfaces.re  iter.re  iter.rei  jbuild  list_.re  list_.rei  pred.re  prelude.re  result.re  result.rei  string_buffer.re  string_buffer.rei  text.re  text.rei  unimplemented.rei  util.re  util.rei  vector.re  vector.rei
source/: cafec.ml  cafec.mli  jbuild  main.ml
src/: Cafec.ml  Main.ml  dune  jbuild
src/containers/: Array.ml  Array.mli  Cafec_Containers.ml  Name.ml  Name.mli  Spanned.ml  Spanned.mli  String.mli  jbuild
src/interpreter/: Cafec_Interpreter.ml  Cafec_Interpreter.mli  Types.ml  dune  jbuild
src/llvm/: cafec_llvm.ml  cafec_llvm.mli  jbuild
src/parse/: Ast.ml  Ast.mli  Cafec_Parse.ml  Error.ml  Error.mli  Lexer.ml  Token.ml  Token.mli  Type.ml  Type.mli  Types.ml  dune  jbuild
src/typed_ast/: Ast.ml  Ast.mli  Cafec_Typed_ast.ml  Cafec_Typed_ast.mli  Error_print.ml  Error_print.mli  Internal.ml  Type.ml  Type.mli  Types.ml  jbuild
test/: Test.ml  dune  jbuild  test.ml
(+101 files in other folders)
