opam-version: "1.2"
name: "cafe"
version: "0.0.1"
maintainer: "Nicole Mazzuca <npmazzuca@gmail.com>"
authors: [
  "Nicole Mazzuca <npmazzuca@gmail.com>"
]
license: "BSD"
tags: [ ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "reason"  {= "2.0.0"}
  "re"
  "pred"
]
available: [ ocaml-version >= "4.03" ]
