opam-version: "1.2"
name: "cafe"
version: "0.0.1"
maintainer: "Nicole Mazzuca <npmazzuca@gmail.com>"
authors: [
  "Nicole Mazzuca <npmazzuca@gmail.com>"
]
license: "BSD"
tags: [ ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "oUnit" {test}
  "ollvm"
  "base"
  "ppx_let"
]
available: [ ocaml-version >= "4.03" ]
