opam-version: "1.2"
name: "pred"
version: "0.0.1"
maintainer: "Nicole Mazzuca <npmazzuca@gmail.com>"
authors: [
  "Nicole Mazzuca <npmazzuca@gmail.com>"
]
license: "BSD"
tags: [ ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "reason"  {= "2.0.0"}
  "re"
]
available: [ ocaml-version >= "4.02" & ocaml-version < "4.05" ]
