(library
  (name Cafec)
  (modules Cafec)
  (libraries
    Cafec_Containers
    Cafec_Interpreter
    Cafec_Parse
    Cafec_Typed_ast)
  (flags :standard -safe-string -w +a-4 -open Base -open Cafec_Containers))

(executables
  (names main)
  (modules main)
  (libraries
    base
    stdio
    Cafec)
  (flags :standard -safe-string -w +a-4 -open Base -open Cafec_Containers))

(install
  (section bin)
  (package cafec)
  (files (main.exe as cafec)))
